--- a/Project_Management_System/Project_Management_System.csproj
+++ b/Project_Management_System/Project_Management_System.csproj
@@ -11,6 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Hangfire" Version="1.8.21" />
+	  <PackageReference Include="Hangfire.AspNetCore" Version="1.8.21" />
+	  <PackageReference Include="Hangfire.SqlServer" Version="1.8.21" />
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
 	  <PackageReference Include="Aspire.Hosting.SqlServer" Version="9.4.1" />
 	  <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.4.1" />
