--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,5 @@ jobs:
     steps:
       - name: pushed
         run: echo "pushed ya moalim"
+      - name: Checkout
+        uses: actions/checkout@v6.0.0
