Add step to list files in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,5 @@ jobs:
         run: echo "pushed ya moalim"
       - name: Checkout
         uses: actions/checkout@v6.0.0
+      - name: list files
+        run: ls -la
